# patchlens

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/patch/: patchmodel.h  patchparser.cpp  patchparser.h
src/patch/: patchmodel.h
src/ui/: mainwindow.cpp  mainwindow.h
